ui2022/src/app/util/styles/utils.scss
.border-right {
  border-right: 1px solid var(--black);
}

.border-bottom {
  border-bottom: 1px solid var(--black);
}

.border-left {
  border-left: 1px solid var(--black);
}

.border-top {
  border-top: 1px solid var(--black);
}

.border-top-right {
  border-right-style: solid !important;
  border-right: 1px;
  border-top-style: solid !important;
  border-top: 1px;
}

.border {
  border: 1px solid var(--black);
}

.bottomLine {
  border-bottom: 1px solid #c9c9c9;
}

.inputOutline {
  background: var(--background);
  border: 1px var(--black) solid;
  border-radius: 1rem;
  margin-bottom: 1rem;
  padding: 0.5rem;
}

.inputOutline0Bottom {
  max-width: 100px;
  background: var(--background);
  border: 1px var(--black) solid;
  border-radius: 1rem;
  margin-bottom: 0;
  padding: 0.5rem;
}

.middle {
  font-family: 'Bull-mono';
  transition: 0.2s ease;
  opacity: 0;
  position: absolute;
  top: 50%;
  left: 50%;
  font-weight: bold;
  font-size: 1rem;
  color: var(--black);
  transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  text-align: center;
}

input,
textarea {
  width: 100%;
  font-family: 'Bull-mono' !important;
  background: #00000000;
  color: var(--black);
  border: none;
  outline: 0;
  font-size: 1rem !important;
}

textarea {
  padding: 0.5rem !important;
}

video {
  opacity: 0.85;
  min-height: 100vh;
  max-width: unset;
  overflow: hidden;
  z-index: 1;
  position: absolute;
  right: 0;
  bottom: 0;
}

.pointer {
  cursor: pointer;
}

.toggle-button {
  font-family: 'Bull-mono';
  padding: 0.5rem 1rem;
  font-size: 1rem;
  border: 1px solid var(--black) !important;
  color: var(--black);
  background: var(--background);
  cursor: pointer;
  border: none;

  &.active {
    border: 1px solid var(--dark-brown) !important;
    background: var(--dark-brown);
    color: var(--background);
  }
  &:hover {
    border: 1px solid var(--green) !important;
    background: var(--green);
    color: var(--black);
  }
  &.left {
    margin-right: 2px;
    border-radius: 45px 0 0 45px;
  }
  &.right {
    border-radius: 0 45px 45px 0;
  }
}

@media only screen and (min-width: 768px) {
  .hideOnDesktop {
    display: none !important;
  }
}

@media only screen and (max-width: 768px) {
  .hideOnMobile {
    display: none;
  }
  .switchColOnMobile {
    flex-direction: column !important;
  }
}

